Fix. Invisible tooltip

--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,12 @@
     box-sizing: border-box;
 
     background: none;
+    overflow: visible;
 }
 
 #minimap-container.minimap-no-wheeling:hover,
-.minimap-no-fading{
+.minimap-no-fading,
+.minimap-ondrag{
     opacity: 1 !important;
 }
 
